--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -8,7 +8,6 @@
     background-size: cover;
     background-position-y: 40%;
     background-repeat: no-repeat;
-    
 
     @media screen and (max-width: 1200px) {
         background-image: url("../../public/images/main.jpg");
@@ -18,10 +17,17 @@
     @media screen and (max-width: 900px) {
         height: 500px;
     }
-    @media screen and (max-width: 750px) {
-        height: 400px;
+
+    @media screen and (max-width: 700px) {
+        height: 420px;
+        background-position-x: 10%;
     }
-    @media screen and (max-width: 600px) {
-        height: 350px;
+    @media screen and (max-width: 480px) {
+        background-position-x: 14%;
+        height: 330px;
+    }
+    @media screen and (max-width: 300px) {
+        height: 280px;
+        background-position-x: 18%;
     }
 }
