--- a/components/actionTop/actionTop.module.scss
+++ b/components/actionTop/actionTop.module.scss
@@ -3,6 +3,8 @@
 @import "../../styles/mixins.scss";
 
 .root {
+    position: relative;
+    top: 120px;
     display: flex;
     flex-direction: row-reverse;
 }
@@ -12,17 +14,25 @@
     max-width: 50%;
     justify-content: flex-end;
     flex-direction: column;
+    margin-top: 20px;
     padding: 20px;
-    transform: translateY(-10px);
+    padding-right: 50px;
     @media screen and(max-width: 1100px) {
         border-radius: 20px 0 0 20px;
-        background: rgba($color: #fff, $alpha: 0.1);
+        background: linear-gradient(180deg, transparent 0, #979a9e 100%);
     }
     @media screen and(max-width: 1000px) {
-        background: rgba($color: #fff, $alpha: 0.2);
+        margin: 0;
     }
     @media screen and(max-width: 900px) {
-        transform: translateY(0px);
+        padding: space(2);
+        padding-right: space(4);
+    }
+
+    p {
+        color: #efefef;
+        margin: 0;
+        margin-top: space(1);
     }
     h1 {
         margin: 0;
@@ -30,27 +40,36 @@
         font-size: 32px;
         color: #fff;
         white-space: nowrap;
-        @media screen and(max-width: 850px) {
+        @media screen and(max-width: 1000px) {
             font-size: 24px;
         }
         span {
             font-size: 50px;
             font-weight: 800;
-            @media screen and(max-width: 850px) {
+            @media screen and(max-width: 1000px) {
                 font-size: 40px;
             }
             &:nth-child(2) {
                 color: $aquaBlue;
                 margin-right: 10px;
                 line-height: 60px;
+                @media screen and(max-width: 1000px) {
+                    line-height: 50px;
+                }
             }
             &:nth-child(3) {
                 color: #eeeeee;
                 line-height: 60px;
+                @media screen and(max-width: 1000px) {
+                    line-height: 50px;
+                }
             }
             &:nth-child(5) {
                 font-size: 32px;
                 color: $pink;
+                @media screen and(max-width: 1000px) {
+                    line-height: 30px;
+                }
             }
         }
     }
@@ -73,11 +92,13 @@
 
 .actionCall {
     h3 {
-        margin-top: 8px;
+        margin-top: space(1);
+        margin-bottom: space(1);
         color: $pinkB;
         font-size: 15px;
         span {
             font-size: 20px;
+            color: $aquaBlue;
         }
     }
 }
