--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -12,21 +12,29 @@
         background-image: url("../../public/images/main.jpg");
         height: 550px;
     }
-
+    //toDo new photo with square ratio
     @media screen and (max-width: 900px) {
         height: 500px;
     }
 
     @media screen and (max-width: 700px) {
         height: 420px;
+        background-position-x: 0%;
+    }
+    @media screen and (max-width: 620px) {
+        height: 420px;
         background-position-x: 10%;
     }
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 550px) {
+        height: 420px;
         background-position-x: 14%;
+    }
+    @media screen and (max-width: 480px) {
+        background-position-x: 19%;
         height: 330px;
     }
     @media screen and (max-width: 300px) {
         height: 280px;
-        background-position-x: 18%;
+        background-position-x: 17%;
     }
 }
