--- a/components/modal/modal.module.scss
+++ b/components/modal/modal.module.scss
@@ -1,6 +1,7 @@
 @import "../../styles/mixins.scss";
 .root {
-    position: absolute;
+    position: fixed;
+    overflow: hidden;
     top: 0;
     left: 0;
     z-index: 1000;
