--- a/components/actionTop/actionTop.module.scss
+++ b/components/actionTop/actionTop.module.scss
@@ -132,7 +132,7 @@
         }
         span {
             font-size: 20px;
-            color: #46dce9;
+            color: $pink;
         }
     }
 }
