--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -3,6 +3,8 @@
     height: 650px;
     width: 100%;
     z-index: -1;
+    background-color: rgb(192, 196, 199);
+ 
     background-image: url("../../public/images/main1920.jpg");
     background-size: cover;
     background-position-y: 40%;
