--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -5,5 +5,7 @@ $pink: #cb5d95;
 $pinkB: #d03c86;
 $aquaBlue: #23bbc9;
 $aqua: #21a8b5;
-$mainGrey: #eaeaea;
+//$mainGrey: #bbbbbb;
+$mainGrey: #adb1b6;
+$cardGrey: #d9d9d9;
 $inputColor: #f4f4f4;
