--- a/components/zoomGallery/ZoomGallery.module.scss
+++ b/components/zoomGallery/ZoomGallery.module.scss
@@ -3,6 +3,7 @@
 @import "../../styles/mixins.scss";
 .root {
     position: relative;
+    -webkit-tap-highlight-color: transparent;
     img {
         max-width: 100%;
         max-height: 100%;
