--- a/components/FAQ/faq.module.scss
+++ b/components/FAQ/faq.module.scss
@@ -14,7 +14,7 @@
         margin-right: space(6);
         font-size: 24px;
     }
-    p{
+    p {
         font-weight: 300;
         font-size: 14px;
     }
@@ -28,10 +28,23 @@
         box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
         cursor: pointer;
     }
-    button:hover{
+    button:hover {
         background-color: $pink;
     }
     .phones {
+        a {
+            background-color: $aqua;
+            font-size: 15px;
+            padding: space(1);
+            border: none;
+            text-transform: uppercase;
+            color: #fff;
+            box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+            cursor: pointer;
+            &:hover {
+                background-color: $pink;
+            }
+        }
         margin-top: space(2);
         display: flex;
         gap: 20px;
@@ -46,12 +59,12 @@
     @media screen and (max-width: 600px) {
         flex-direction: column;
         align-items: center;
-        strong{
+        strong {
             margin: 0;
         }
     }
     @media screen and (max-width: 350px) {
-        button{
+        button {
             font-size: 12px;
         }
     }
