--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -14,29 +14,58 @@
         background-image: url("/images/main.webp");
         height: 550px;
     }
+    // @media screen and (max-width: 620px) {
+    //     background-image: url("/images/main700.webp");
+    //    // height: 550px;
+    // }
     //toDo new photo with square ratio
     @media screen and (max-width: 900px) {
         height: 500px;
     }
 
+    @media screen and (max-width: 750px) {
+        height: 460px;
+        background-position-x: 0%;
+    }
     @media screen and (max-width: 700px) {
         height: 420px;
         background-position-x: 0%;
     }
     @media screen and (max-width: 620px) {
-        height: 420px;
-        background-position-x: 10%;
+        height: 390px;
+        background-position-x: 6%;
     }
-    @media screen and (max-width: 550px) {
-        height: 420px;
-        background-position-x: 14%;
+    @media screen and (max-width: 560px) {
+        height: 360px;
+    }
+    @media screen and (max-width: 520px) {
+        height: 400px;
+        background-image: url("/images/main700_h.webp");
+        background-position-y: 100%;
+        background-position-x: 30%;
     }
     @media screen and (max-width: 480px) {
-        background-position-x: 19%;
+        background-position-x: 100%;
+        height: 350px;
+    }
+    @media screen and (max-width: 440px) {
+        background-position-x: 90%;
         height: 330px;
     }
-    @media screen and (max-width: 300px) {
+    @media screen and (max-width: 420px) {
+        background-position-x: 100%;
+        height: 300px;
+    }
+    @media screen and (max-width: 380px) {
         height: 280px;
-        background-position-x: 17%;
+        background-position-x: 90%;
+    }
+    @media screen and (max-width: 340px) {
+        height: 250px;
+        background-position-x: 100%;
+    }
+    @media screen and (max-width: 300px) {
+        height: 230px;
+        background-position-x: 90%;
     }
 }
