--- a/components/telegramForm/telegramForm.module.scss
+++ b/components/telegramForm/telegramForm.module.scss
@@ -138,14 +138,55 @@
 
 .policy {
     margin: 0;
-    font-size: 10px;
+    font-size: 12px;
     a {
         color: $pink;
     }
 }
 
-.policyInModal {
-    padding-left: space(4);
-    padding-right: space(4);
-    padding-bottom: space(2);
+
+
+.checkBoxContainer {
+    margin-top: space(1);
+
+
+    input[type="checkbox"] {
+        opacity: 0;
+        position: absolute;
+        cursor: pointer;
+       
+        &:hover + label::before {
+            background-color: $pink;
+        }
+        &:checked + label::before{
+            content: '\002714';
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: $pinkB;
+            
+        }
+    }
+    label {
+        display: flex;
+        align-items: center;    
+        cursor: pointer;
+        &:hover::before {
+            background-color: $pink;
+        }
+    }
+
+    label:before {
+        content: "";
+        min-width: 18px;
+        min-height: 18px;
+        border-radius: 0.2em;
+        border: 0.05em solid black;
+        margin-right: 0.5em;
+    }
+}
+
+.checkbox{
+    color: #fff;
 }
