--- a/components/telegramForm/telegramForm.module.scss
+++ b/components/telegramForm/telegramForm.module.scss
@@ -154,6 +154,10 @@
         opacity: 0;
         position: absolute;
         cursor: pointer;
+
+        &:focus + label::before{
+            box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+        }
        
         &:hover + label::before {
             background-color: $pink;
@@ -179,6 +183,7 @@
 
     label:before {
         content: "";
+        background-color: $inputColor;
         min-width: 18px;
         min-height: 18px;
         border-radius: 0.2em;
